Removed dao logic from view classes, fixed some problems